<resources>
    <string name="app_name">AppLes</string>

    <string name="dashboard_presents">Schedule</string>
    <string name="dashboard_students">Students</string>
	<string name="dashboard_payments">Payments</string>
	<string name="dashboard_topics">Topics</string>
	<string name="dashboard_change_data">Data Management</string>
	<string name="dashboard_edit_data">Edit data</string>
	<string name="dashboard_daily_input">Daily Input</string>

    <string name="class_format">Class %1$d</string>

	<string name="daily_alert_date_wrong">Chosen date is not Saturday or Sunday</string>
	<string name="daily_dialog_positive">Re-choose</string>
	<string name="daily_dialog_negative">Dismiss</string>
	<string name="daily_topic_level_hint">Class</string>
	<string name="daily_topic_content_hint">Content</string>
	<string name="daily_list_present">Today Present</string>
	<string name="daily_list_topic">Today Topic</string>
	<string name="daily_list_payment">Today Payment</string>
	<string name="daily_holiday_button">Set Holiday</string>
	<string name="daily_ready_button">Set Ready</string>

	<string name="student_details_present_format">Presents: %1$d</string>
	<string name="student_details_present_after_payment_format">Present after payment: %1$d</string>
	<string name="student_details_last_payment_format">Last payment: %1$s</string>
	<string name="student_details_all_payment_format">All payments: %1$d</string>
	<string name="student_details_show_details">More</string>
	<string name="student_details_hide_details">Less</string>
	<string name="student_add_name_hint">Name</string>
	<string name="student_add_class_hint">Class</string>
	<string name="student_add_done_button">Done</string>
	<string name="student_add_title">Add New Student</string>
	<string name="student_delete_title">Delete Student</string>
	<string name="student_add_error_name_exist">Name already exists</string>
	<string name="student_delete_error_name_not_exist">Name doesn\'t exist</string>
	<string name="student_add_error_input">Input error</string>


	<string name="payment_add_title">Add New Student</string>
	<string name="payment_delete_title">Delete Student</string>
	<string name="payment_add_error_name_not_exist">Name doesn\'t exist</string>
	<string name="payment_add_error_input">Input error</string>
	<string name="payment_delete_error_payment_not_exist">Payment doesn\'t exist</string>

	<string name="present_add_title">Add New Present</string>
	<string name="present_delete_title">Delete Present</string>
	<string name="present_add_error_name_not_exist">Name doesn\'t exist</string>
	<string name="present_add_error_name_exist">Name already exists</string>
	<string name="present_add_error_date_not_exist">Date doesn\'t exist</string>
	<string name="present_add_error_input">Input error</string>

	<string name="topic_add_title">Add New Topic</string>
	<string name="topic_delete_title">Delete Topic</string>
	<string name="topic_error_level_not_exist">Class doesn\'t exist</string>
	<string name="topic_error_date_not_exist">Date doesn\'t exist</string>
	<string name="topic_error_already_exists">Topic already exists</string>
	<string name="topic_error_not_exists">Topic doesn\'t exist</string>
	<string name="topic_error_input">Input error</string>
	<string name="topic_level_hint">Class</string>
	<string name="topic_date_hint">Date</string>
	<string name="topic_content_hint">Content</string>

	<string name="schedule_saturday">Saturday</string>
	<string name="schedule_sunday">Sunday</string>

	<string name="menu_see_previous_month">See Previous Month</string>
	<string name="menu_see_next_month">See Next Month</string>
	<string name="menu_save">Save</string>
	<string name="menu_done">Done</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_add_student">Add Student</string>
	<string name="menu_delete_student">Delete Student</string>
	<string name="menu_add_payment">Add Payment</string>
	<string name="menu_delete_payment">Delete Payment</string>
	<string name="menu_add_present">Add Present</string>
	<string name="menu_delete_present">Delete Present</string>
	<string name="menu_add_topic">Add Topic</string>
	<string name="menu_delete_topic">Delete Topic</string>

	<string name="addable_add">Add New</string>
	<string name="date_format">dd-MM-yyyy</string>
</resources>
