<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="200dp"
	android:layout_height="wrap_content">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/nameLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/nameET"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/student_add_name_hint"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/dateLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/dateET"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/date_format"/>

	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/doneBtn"
		style="@style/Base.Widget.AppCompat.Button.Borderless"
		android:text="@string/student_add_done_button"
		android:layout_gravity="end"
		android:textColor="@color/accent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

</LinearLayout>