<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/item_margin_small">

		<TextView
			android:id="@+id/date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:drawableRight="@drawable/ic_date_range_accent"
			android:textColor="@color/primary_text"
			android:textSize="@dimen/title_text_size"
			android:textStyle="bold"
			tools:text="Sunday, 32-13-9999"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="@dimen/item_margin_large"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/daily_list_present"
			android:textColor="@color/primary_text"
			android:textSize="@dimen/item_title_text_size"
			android:textStyle="bold"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/presentList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="@dimen/item_margin_small"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/daily_list_topic"
			android:textColor="@color/primary_text"
			android:textSize="@dimen/item_title_text_size"
			android:textStyle="bold"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/topicList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="@dimen/item_margin_small"/>

		<Button
			android:id="@+id/holidayBtn"
			style="@style/Base.Widget.AppCompat.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingStart="@dimen/item_margin_small"
			android:paddingEnd="@dimen/item_margin_small"
			android:layout_gravity="center"
			android:background="@color/holiday"
			android:text="@string/daily_holiday_button"/>
	</LinearLayout>
</ScrollView>